--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>"Have a question, comment, or just want to say hello? Feel free to drop me a message using the form below</p>
-							<form method="post" action="<form method="post" action="contact.php">
+							<form method="post" action="contact.php">
 								<!-- Existing form fields... -->
-							</form>
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -152,7 +151,7 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form>							
 							<ul class="contact">
 								<li class="icon solid fa-home">
 									Cairo, Egypt
