--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>"Have a question, comment, or just want to say hello? Feel free to drop me a message using the form below</p>
-							<form method="post" action="contact.php">
-								<!-- Existing form fields... -->
+							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -150,8 +149,12 @@
 								</div>
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
+									<form method="post" action="contact.php">
+										<!-- Existing form fields... -->
+									</form>
+										
 								</ul>
-							</form>							
+							</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
 									Cairo, Egypt
