--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>"Have a question, comment, or just want to say hello? Feel free to drop me a message using the form below</p>
-							<form method="post" action="contact.php">
+							<form method="post" action=""C:\Users\moham\OneDrive\Documents\GitHub\My-Portfolio\contact.php"">
     <!-- Existing form fields... -->
     <div class="fields">
         <div class="field">
